
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int Is64 () ;

bool IsX64()
{
 if (Is64() == 0)
 {
  return 0;
 }


 return 1;



}
